GPencil: Problem with assigning layers to view layers #77156

Closed
opened 2020-05-29 08:54:55 +02:00 by Andrew Cui · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 26.20.100.7926

Blender Version
Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-28 11:42, hash: ff1040c6fe
Worked: version 2.82a

Short description of error

I was experimenting with the new 2.83 beta and test-painting some realistic shading on grease pencil objects; the need to be able to composite the layers after rendering lead me to the bug.

I noticed that there was an error in separating the different grease pencil layers on rendering; please see the instructions below.

The problem does not appear when attempted in the previous version 2.82a, only in the latest 2.83 beta (and the one obtained on the 19th of March).

The problem also appears in all 3 of the rendering engine: Cycles, Eevee, and Workbench.

Exact steps for others to reproduce the error

Open the attached .blend file

Notice that in the "Object Data Properties" tab, the two layers "Fills" and "Lines" in the grease pencil monkey are clearly allocated to different view layers in the "Adjustments" section.

Render the image.

Notice that when you switch view layers in the rendered image, the view stays completely the same; there was no separation of grease pencil layers during rendering. All the view layers will be same as the final composite when they should have been distinctly separate.

2.83 grease pencil test bug report.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 26.20.100.7926 **Blender Version** Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-28 11:42, hash: `ff1040c6fe` Worked: version 2.82a **Short description of error** I was experimenting with the new 2.83 beta and test-painting some realistic shading on grease pencil objects; the need to be able to composite the layers after rendering lead me to the bug. I noticed that there was an error in separating the different grease pencil layers on rendering; please see the instructions below. The problem does not appear when attempted in the previous version 2.82a, only in the latest 2.83 beta (and the one obtained on the 19th of March). The problem also appears in all 3 of the rendering engine: Cycles, Eevee, and Workbench. **Exact steps for others to reproduce the error** # Open the attached .blend file # Notice that in the "Object Data Properties" tab, the two layers "Fills" and "Lines" in the grease pencil monkey are clearly allocated to different view layers in the "Adjustments" section. # Render the image. # Notice that when you switch view layers in the rendered image, the view stays completely the same; there was no separation of grease pencil layers during rendering. All the view layers will be same as the final composite when they should have been distinctly separate. [2.83 grease pencil test bug report.blend](https://archive.blender.org/developer/F8562595/2.83_grease_pencil_test_bug_report.blend)
Author

Added subscriber: @oogleg01

Added subscriber: @oogleg01

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @antoniov

Added subscriber: @antoniov

It looks this functionality was removed during refactor by error.

It looks this functionality was removed during refactor by error.
Antonio Vazquez self-assigned this 2020-06-02 17:18:52 +02:00

Note: This feature is designed to work only in Render mode and not in viewport.

Note: This feature is designed to work only in Render mode and not in viewport.
Antonio Vazquez changed title from Problem with assigning grease pencil layers to view layers to GPencil: Problem with assigning layers to view layers 2020-06-03 09:28:04 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 09db0f2a34

This issue was referenced by 09db0f2a34671abc233681a5a14349642c7bd0dc

This issue was referenced by 4184371fb0

This issue was referenced by 4184371fb04e6328f74eab8e27636580e10e84fb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77156
No description provided.