Fix T77156: GPencil view layer filter by layer not working

This was removed by error during the refactor done in 2.83.

Differential Revision: https://developer.blender.org/D7909

Reviewers: @fclem