source/blender/draw/engines/overlay/overlay_outline.c
@@ -259,7 +259,7 @@ static void OVERLAY_outline_gpencil(OVERLAY_PrivateData *pd, Object *ob)
   }
 
   BKE_gpencil_visible_stroke_iter(
-      ob, gp_layer_cache_populate, gp_stroke_cache_populate, &iter, false, pd->cfra);
+      NULL, ob, gp_layer_cache_populate, gp_stroke_cache_populate, &iter, false, pd->cfra);
 }
 
 void OVERLAY_outline_cache_populate(OVERLAY_Data *vedata,
